# cuda_test

./: CMakeLists.txt  array_sum.cu  cuda_test.h  main.cpp  matrix_mult.cu
thread_test/: client  client.cpp  client2  client3  epoll  epoll.cpp  server
